# whatisthatthing

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  home.cpp  home.hpp  home.ui  login.cpp  login.hpp  login.ui  main.cpp  newrand.hpp  register.cpp  register.hpp  register.ui  sdl3game1.cpp  sdl3game1.hpp  sdl3game1_desc.cpp  sdl3game1_desc.hpp  sdl3game1_desc.ui  sdl3game2.cpp  sdl3game2.hpp  sdl3game2_desc.cpp  sdl3game2_desc.hpp  sdl3game2_desc.ui  sdl3game3.cpp  sdl3game3.hpp  sdl3game3_desc.cpp  sdl3game3_desc.hpp  sdl3game3_desc.ui  sdl3game4.cpp  sdl3game4.hpp  sdl3game4_desc.cpp  sdl3game4_desc.hpp  sdl3game4_desc.ui  sdl3game5.cpp  sdl3game5.hpp  sdl3game5_desc.cpp  sdl3game5_desc.hpp  sdl3game5_desc.ui  (+5 more)
